--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(TinyXVC C)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE DEBUG)
 
+find_package(LibFTDI1 NO_MODULE REQUIRED)
+include( ${LIBFTDI_USE_FILE} )
+
 add_executable(TinyXVC
     src/txvc.c
     src/fixtures.c
@@ -20,4 +23,7 @@ target_compile_options(TinyXVC
 set_property(TARGET TinyXVC PROPERTY C_STANDARD 11)
 set_property(TARGET TinyXVC PROPERTY LINK_FLAGS "${CMAKE_CURRENT_LIST_DIR}/src/txvc.ld")
 set_property(TARGET TinyXVC PROPERTY OUTPUT_NAME txvc)
+target_link_libraries(TinyXVC
+    ftdi1
+    )
 
