--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.13)
 
 project(TinyXVC C)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_BUILD_TYPE DEBUG)
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
 
 find_package(LibFTDI1 NO_MODULE REQUIRED)
 include( ${LIBFTDI_USE_FILE} )
@@ -14,15 +16,17 @@ add_executable(TinyXVC
     src/module/echo.c
     src/module/ft2232h.c
     )
+set_property(TARGET TinyXVC PROPERTY C_STANDARD 11)
+set_property(TARGET TinyXVC PROPERTY OUTPUT_NAME txvc)
 target_include_directories(TinyXVC
     PRIVATE include/
     )
 target_compile_options(TinyXVC
     PRIVATE -Wall -Werror
     )
-set_property(TARGET TinyXVC PROPERTY C_STANDARD 11)
-set_property(TARGET TinyXVC PROPERTY LINK_FLAGS "${CMAKE_CURRENT_LIST_DIR}/src/txvc.ld")
-set_property(TARGET TinyXVC PROPERTY OUTPUT_NAME txvc)
+target_link_options(TinyXVC
+    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src/txvc.ld
+    )
 target_link_libraries(TinyXVC
     ftdi1
     )
