--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,11 @@ include( ${LIBFTDI_USE_FILE} )
 
 add_executable(TinyXVC
     src/txvc.c
-    src/fixtures.c
+    src/utils.c
     src/log.c
-    src/module.c
-    src/module/echo.c
-    src/module/ft2232h.c
+    src/driver.c
+    src/driver/echo.c
+    src/driver/ft2232h.c
     )
 set_property(TARGET TinyXVC PROPERTY C_STANDARD 11)
 set_property(TARGET TinyXVC PROPERTY OUTPUT_NAME txvc)
@@ -27,7 +27,7 @@ target_compile_options(TinyXVC
     PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-padded
     )
 target_link_options(TinyXVC
-    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src/module.ld
+    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src/driver.ld
     )
 target_link_libraries(TinyXVC
     ftdi1
