--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ target_include_directories(TinyXVC
     PRIVATE include/
     )
 target_compile_options(TinyXVC
-    PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-padded
+    PRIVATE -Wall -Wextra -Wpedantic -Werror
     )
 target_link_options(TinyXVC
     PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src/driver.ld
