--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,11 @@ target_include_directories(TinyXVC
     )
 target_compile_options(TinyXVC
     PRIVATE -Wall -Wextra -Wpedantic -Werror
+            -ffunction-sections -fdata-sections
     )
 target_link_options(TinyXVC
-    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src/driver.ld
+    PRIVATE -Wl,--script=${CMAKE_CURRENT_LIST_DIR}/src/driver.ld
+            -Wl,--gc-sections
     )
 target_link_libraries(TinyXVC
     ftdi1
