--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(TinyXVC
     src/alias.c
     src/server.c
     src/jtag_splitter.c
+    src/bit_vector.c
     src/driver/echo.c
     src/driver/ft2232h.c
     src/driver/ftdi-generic.c
@@ -29,12 +30,10 @@ target_include_directories(TinyXVC
 target_compile_options(TinyXVC
     PRIVATE -Wall -Wextra -Wpedantic -Werror
             -ffunction-sections -fdata-sections
-            -pg
     )
 target_link_options(TinyXVC
     PRIVATE -Wl,--script=${CMAKE_CURRENT_LIST_DIR}/src/driver.ld
             -Wl,--gc-sections
-            -pg
     )
 target_link_libraries(TinyXVC
     ftdi1
