--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,29 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 find_package(LibFTDI1 NO_MODULE REQUIRED)
-include( ${LIBFTDI_USE_FILE} )
+include(${LIBFTDI_USE_FILE})
 
-add_executable(TinyXVC
+
+function(add_txvc_executable target)
+    cmake_parse_arguments(ARG
+        ""
+        "OUTPUT_NAME"
+        "DEPENDS;SRCS" ${ARGN})
+    add_executable(${target} ${ARG_SRCS})
+    set_property(TARGET ${target} PROPERTY C_STANDARD 11)
+    if(ARG_OUTPUT_NAME)
+        set_property(TARGET ${target} PROPERTY OUTPUT_NAME ${ARG_OUTPUT_NAME})
+    endif()
+    target_compile_options(${target}
+        PRIVATE -Wall -Wextra -Wpedantic -Werror -ffunction-sections -fdata-sections)
+    if(ARG_DEPENDS)
+        target_link_libraries(${target} ${ARG_DEPENDS})
+    endif()
+endfunction()
+
+
+add_txvc_executable(TinyXVC
+    SRCS
     src/txvc.c
     src/log.c
     src/driver.c
@@ -21,21 +41,25 @@ add_executable(TinyXVC
     src/driver/echo.c
     src/driver/ft2232h.c
     src/driver/ftdi_generic.c
+    OUTPUT_NAME
+    txvc
+    DEPENDS
+    ftdi1
     )
-set_property(TARGET TinyXVC PROPERTY C_STANDARD 11)
-set_property(TARGET TinyXVC PROPERTY OUTPUT_NAME txvc)
 target_include_directories(TinyXVC
     PRIVATE include/
-    )
-target_compile_options(TinyXVC
-    PRIVATE -Wall -Wextra -Wpedantic -Werror
-            -ffunction-sections -fdata-sections
     )
 target_link_options(TinyXVC
     PRIVATE -Wl,--script=${CMAKE_CURRENT_LIST_DIR}/src/driver.ld
             -Wl,--gc-sections
     )
-target_link_libraries(TinyXVC
-    ftdi1
+
+add_txvc_executable(Tester
+    SRCS
+    test/support/main.c
+    test/dummy.c
+    )
+add_custom_target(UnitTest
+    Tester
     )
 
