Test library doc and rename

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,6 @@ endfunction()
 add_subdirectory(libtxvc)
 add_subdirectory(libdrivers)
 add_subdirectory(txvc)
-add_subdirectory(test_support)
+add_subdirectory(libtinytest)
 add_subdirectory(tests)
 
