--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,9 +4,11 @@ add_txvc_executable(Tests
     main.c
     bit_vector_test.c
     log_test.c
+    server_test.c
     DEPENDS
     TinyTest
     Txvc
+    pthread
     )
 add_custom_target(UnitTest
     Tests
