Indent build files

--- a/txvc/CMakeLists.txt
+++ b/txvc/CMakeLists.txt
@@ -1,13 +1,12 @@
 
 add_txvc_executable(TxvcExe
+    OUTPUT_NAME txvc
     SRCS
-    txvc.c
-    alias.c
-    OUTPUT_NAME
-    txvc
+        txvc.c
+        alias.c
     DEPENDS
-    Txvc
-    Drivers
+        Txvc
+        Drivers
     )
 target_link_options(TxvcExe PRIVATE -Wl,--gc-sections)
 
