Extract profile parser

--- a/libtxvc/CMakeLists.txt
+++ b/libtxvc/CMakeLists.txt
@@ -5,6 +5,7 @@ add_txvc_library(Txvc
         jtag_splitter.c
         log.c
         server.c
+        profile.c
     INCDIRS
         include/
     )
