--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ add_txvc_executable(Tests
     SRCS
         main.c
         bit_vector_test.c
+        jtag_splitter_test.c
         log_test.c
         server_test.c
         profile_test.c
