Fast linear allocator

--- a/libtxvc/CMakeLists.txt
+++ b/libtxvc/CMakeLists.txt
@@ -4,6 +4,7 @@ add_txvc_library(Txvc
         bit_vector.c
         jtag_splitter.c
         log.c
+        mempool.c
         server.c
         profile.c
     INCDIRS
