Heap-backed mempool

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_txvc_executable(Tests
         bit_vector_test.c
         jtag_splitter_test.c
         log_test.c
+        mempool_test.c
         server_test.c
         profile_test.c
     DEPENDS
