--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.13)
 
 project(TinyXVC C)
 
+option(TXVC_ENABLE_GPROF "Enable gprof intstrumentation for executables" OFF)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -11,6 +13,7 @@ find_package(LibFTDI1 NO_MODULE REQUIRED)
 include(${LIBFTDI_USE_FILE})
 
 set(TXVC_C_FLAGS
+    $<$<BOOL:${TXVC_ENABLE_GPROF}>:-pg>
     -Wall
     -Wextra
     -Wpedantic
@@ -18,6 +21,9 @@ set(TXVC_C_FLAGS
     -Werror
     -ffunction-sections
     -fdata-sections)
+
+set(TXVC_LINK_FLAGS
+    $<$<BOOL:${TXVC_ENABLE_GPROF}>:-pg>)
 
 function(add_txvc_library target)
     cmake_parse_arguments(ARG
@@ -46,6 +52,7 @@ function(add_txvc_executable target)
     if(ARG_DEPENDS)
         target_link_libraries(${target} ${ARG_DEPENDS})
     endif()
+    target_link_libraries(${target} "$<JOIN:${TXVC_LINK_FLAGS}, >")
     if(ARG_OUTPUT_NAME)
         set_property(TARGET ${target} PROPERTY OUTPUT_NAME ${ARG_OUTPUT_NAME})
     endif()
