--- a/txvc/CMakeLists.txt
+++ b/txvc/CMakeLists.txt
@@ -9,5 +9,14 @@ add_txvc_executable(TxvcExe
         Txvc
         Drivers
     )
-target_link_options(TxvcExe PRIVATE -Wl,--gc-sections)
+
+configure_file(txvc.h.in config/txvc.h @ONLY)
+target_include_directories(TxvcExe PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+
+target_link_options(TxvcExe PRIVATE
+    -Wl,--gc-sections
+    -Wl,--version-script=${CMAKE_CURRENT_LIST_DIR}/exports.txt
+    )
+
+install(TARGETS TxvcExe)
 
