Always get version from Git

--- a/package/CMakeCPackOptions.cmake.in
+++ b/package/CMakeCPackOptions.cmake.in
@@ -1,6 +1,6 @@
 
 set(CPACK_PACKAGE_NAME "txvc")
-set(CPACK_PACKAGE_VERSION @TXVC_VERSION_COMBINED@)
+set(CPACK_PACKAGE_VERSION @TXVC_VERSION@)
 set(CPACK_PACKAGE_CONTACT "Sergey Guralnik <2010serhio@gmail.com>")
 
 if (CPACK_GENERATOR STREQUAL "DEB")
