--- a/txvc/txvc.h.in
+++ b/txvc/txvc.h.in
@@ -1,4 +1,4 @@
 
-#define TXVC_VERSION "@TXVC_VERSION_COMBINED@"
+#define TXVC_VERSION "@TXVC_VERSION@"
 #define TXVC_DESCRIPTION "@CMAKE_PROJECT_DESCRIPTION@"
 
