--- a/package/CMakeCPackOptions.cmake.in
+++ b/package/CMakeCPackOptions.cmake.in
@@ -8,7 +8,8 @@ if (CPACK_GENERATOR STREQUAL "DEB")
     execute_process(COMMAND dpkg --print-architecture
         OUTPUT_VARIABLE CPACK_DEBIAN_PACKAGE_ARCHITECTURE
         OUTPUT_STRIP_TRAILING_WHITESPACE)
-    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libftdi1-2 (>= 1.4), libc6 (>= 2.23)")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS
+        "udev (>= 229), libftdi1-2 (>= 1.4), libc6 (>= 2.23)")
     set(CPACK_DEBIAN_PACKAGE_HOMEPAGE @CMAKE_PROJECT_HOMEPAGE_URL@)
     set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
         @CMAKE_CURRENT_LIST_DIR@/deb/postinst)
