Cleanup build scripts

--- a/package/CMakeCPackOptions.cmake.in
+++ b/package/CMakeCPackOptions.cmake.in
@@ -4,10 +4,7 @@ set(CPACK_PACKAGE_VERSION @TXVC_VERSION@)
 set(CPACK_PACKAGE_CONTACT "Sergey Guralnik <2010serhio@gmail.com>")
 
 if (CPACK_GENERATOR STREQUAL "DEB")
-    # XXX This is wrong if crosscompiling or using -march
-    execute_process(COMMAND dpkg --print-architecture
-        OUTPUT_VARIABLE CPACK_DEBIAN_PACKAGE_ARCHITECTURE
-        OUTPUT_STRIP_TRAILING_WHITESPACE)
+    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE @TXVC_ARCH@)
     set(CPACK_DEBIAN_PACKAGE_DEPENDS "libftdi1-2 (>= 1.4), libc6 (>= 2.23)")
     set(CPACK_DEBIAN_PACKAGE_HOMEPAGE @CMAKE_PROJECT_HOMEPAGE_URL@)
     set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
