Separate usage banners

--- a/txvc/txvc.h.in
+++ b/txvc/txvc.h.in
@@ -1,4 +1,5 @@
 
+#define TXVC_PROJECT_NAME "@CMAKE_PROJECT_NAME@"
 #define TXVC_VERSION "@TXVC_VERSION@"
 #define TXVC_DESCRIPTION "@CMAKE_PROJECT_DESCRIPTION@"
 
