--- a/package/CMakeCPackOptions.cmake.in
+++ b/package/CMakeCPackOptions.cmake.in
@@ -5,7 +5,7 @@ set(CPACK_PACKAGE_CONTACT "Sergey Guralnik <2010serhio@gmail.com>")
 
 if (CPACK_GENERATOR STREQUAL "DEB")
     set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE @TXVC_ARCH@)
-    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libftdi1-2 (>= 1.4), libc6 (>= 2.23)")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.23)")
     set(CPACK_DEBIAN_PACKAGE_HOMEPAGE @CMAKE_PROJECT_HOMEPAGE_URL@)
     set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
         @CMAKE_CURRENT_LIST_DIR@/deb/postinst)
